--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="card-art">'그럼에도 살아가야 한다'라는 주제에 대해 하현상은 "'모든 게 마음먹기 달렸다' 그런 노랫말도 있다. 정말 아픔에 얽매인 사람들도 있다. 팬분들의 편지들을...</div>
         </a>
         <a href="https://www.newsen.com/news_view.php?uid=202305220800440410" class="card">
-          <img src="https://photo.newsen.com/news_photo/2023/05/22/202305220800440410_1.jpg" alt="">
+          <img src="https://images.khan.co.kr/article/2023/05/22/news-p.v1.20230522.eab29544acd74b129520905a54ec236a_P1.jpg" alt="">
           <div class="card-name">하현상, 정규 1집 발매 기념 깜짝 버스킹 개최 “감회 새로워”</div>
           <div class="card-art">싱어송라이터 하현상이 버스킹으로 팬들을 뜻깊은 추억을 새겼다. 하현상은 5월 21일 북서울 꿈의 숲에서 정규 1집 앨범 ‘Time and Trace’ 발매 기념...</div>
         </a>
